2006-08-22  Donald E. Curtis  <dcurti3@sourceforge.net>

	* src/*: Refactored Renderer -> GLEngine for easier typing.

	* src/engines/*: Engines must implement the render function but must be
	implemented for each sub-class of Primitive they wish to be able to
	render. (ie. void render(Atom *a), render(Bond *b)).

2006-08-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/GLWidget.cpp: Handle mouse events based on QMouseEvent,
	rather than internal members. Fixes occasional "sticking."

	* src/MainWindow.h, src/MainWindow.cpp: Fix saveFile -- make sure to call
	SetOutFormat() not SetInFormat()! Works great now. Added code to
	save settings for window position and size.

	* src/main.cpp: Update with fix from Carsten Niehaus to use
	cleaner "foreach" mechanism.

2006-08-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/GLWidget.cpp: Improved scale/zoom feature and added calls
	for adding screen coordinates (e.g., for seelction rectangle).

	* src/MainWindow.cpp: Check to see if a file is already in a
	window -- raise it if needed, rather than opening another
	copy. Implement exportGraphics with
	QGLWidget::grabFrameBuffer. Doesn't allow oversampling, but
	works.

2006-08-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/*: Namespace and filename reorganization. All code should
	now be in the Avogadro namespace. All files should have
	descriptive names and no "A" prefix.

	* src/GLWidget.h, src/GLWidget.cpp: Fix translation (right button)
	and add simple zoom (middle button). Doesn't always seem to work
	on my Mac right now. (Buttons sometimes seem to get "stuck.")

	* src/MainWindow.cpp: Fix bug with opening files in new window --
	now properly renders. Fix bug with shortcut for Save/SaveAs, and
	add "Redo" to the menubar. undo() and redo() actions still
	unimplemented.

2006-08-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/ASphereRender.h, src/ASphereRender.cpp: Example rendering