@@ -1,3 +1,9 @@
+2006-08-24  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/MainWindow.cpp: Make sure to update recent file list when
+	creating a new window, and make sure to call updateGL after
+	reading a file. Fixes minor bugs. 
+
 2006-08-22  Donald E. Curtis  <dcurti3@sourceforge.net>
 
 	* src/*: Refactored Renderer -> GLEngine for easier typing.
